# eq

./: .gitignore  CMakeLists.txt  Makefile  README.md  belongs.c  ebuild_parser.c  main.c  meta.c  use.c  utils.c
include/: belongs.h  ebuild_parser.h  mergetime.h  meta.h  shared.h  size.h  use.h  utils.h
src/: main.c  mergetime.c  meta.c  size.c  use.c  utils.c
